objects/Item_Question__c.object
<CustomObject>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Item_Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IQ_Order__c</fullName>
        <label>IQ Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Pool__c</fullName>
        <label>Item Pool</label>
        <referenceTo>Item_Pool__c</referenceTo>
        <relationshipName>Item_Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>BLN_Item__c</referenceTo>
        <relationshipName>Item_Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Level__c</fullName>
        <label>Question Level</label>
        <picklist>
            <picklistValues>
                <fullName>Ticket Level</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Event Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Retrieval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipName>Item_Question</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRequired</label>
        <type>Checkbox</type>
    </fields>
    <label>BLN Item Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Question__c</columns>
        <columns>Question_Level__c</columns>
        <columns>Item__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IA-{0000}</displayFormat>
        <label>Item_Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Item_Question</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>